--- a/src/manifest.json
+++ b/src/manifest.json
@@ -36,6 +36,9 @@
       },
       "pages/TaskPage": {
         "component": "index"
+      },
+      "pages/Input": {
+        "component": "index"
       }
     },
     "widgets": {
@@ -53,7 +56,7 @@
     }
   },
   "display": {
-    "titleBarBackgroundColor": "#ffffff",
+    "titleBarBackgroundColor": "rgb(243, 245, 250)",
     "titleBarTextColor": "#000000",
     "pages": {
       "pages/Demo": {
